--- a/savaliya_technology/index.html
+++ b/savaliya_technology/index.html
@@ -91,7 +91,7 @@
         </div>
         <div class=" row blue-div">
             <div class="col-lg-9">
-                <p><img src="images/wall-clock.png"></i>We'are Open: Mon - Sat 8:00 - 18:00</p>
+                <p><img src="images/wall-clock.png"></i>We are Open: Mon - Sat 8:00 - 18:00</p>
             </div>
             <div class="col-lg-3 social-iconss">
                 <div>
