--- a/savaliya_technology/index.html
+++ b/savaliya_technology/index.html
@@ -5,7 +5,7 @@
    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Savaliya Technology</title>
-    <link rel = "icon" href = "images/favicon.jpg"  type = "image/x-icon">
+    <link rel = "icon" href = "images/favicon.ico"  type = "image/x-icon">
     <!--SWIPER-->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="style/swiper-bundle.min.css">
