--- a/index.html
+++ b/index.html
@@ -31,21 +31,13 @@
         <!-- jQuery -->
             <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    <!-- Locale Dependencies -->
+        <!-- Locale Dependencies -->
 
         <!-- CSS -->
         <link rel="stylesheet" href="style/swiper-bundle.min.css">
         <link rel="stylesheet" href="style/style.css">
         <link rel="stylesheet" href="style/mediastyle.css">
         <link rel="stylesheet" href="style/Spinnerstyle.css">
-
-
-        <!-- JS -->
-        
-        <script src="Javascript/swiper-bundle.min.js"></script>
-        <script src="Javascript/script.js"></script> 
-
-
 
     <title>Savaliya Technology</title>
 
@@ -76,7 +68,7 @@
       </div>
     <div id="home" class="container-fluid outer-header">
         <div class="container raw inner-header">
-            <div class="col-lg-4 col-md-4 col-sm-4 inner-h1"><img id="topup" class="logo" src="images/logo.png"></div>
+            <div class="col-lg-4 col-md-4 col-sm-4 inner-h1"><img id="topup" class="logo" src="images/logo.png" ></div>
             <div class="col-lg-8 col-md-8 col-sm-8 inner-h2">
                 <ul>
                     <li>
@@ -377,11 +369,11 @@
                 </div>
             </div>
             <div class="row trio-main">
-                <div class="col-lg-4 col-md-12 col-sm-12 trio-submain2">
-                    <div class="trio-submain2-div1">
+                <div class="col-lg-4 col-md-12 col-sm-12 trio-submain1">
+                    <div class="trio-submain1-div1">
                         <div>
-                            <img src="images/mobile-message.png">
-                            <img src="images/one.png"> 
+                            <img src="images/mobile-message.png" class="img_icons">
+                            <img src="images/one.png" class="img_no"> 
                         </div>
                         <h3>Request<span> Enquiry</span></h3>
                         <p>We provide variety of Services which are available world-wide</p>
@@ -390,8 +382,8 @@
                 <div class="col-lg-4 col-md-12 col-sm-12 trio-submain2">
                     <div class="trio-submain2-div1">
                         <div>
-                            <img src="images/3d-pen.png">
-                            <img src="images/two.png"> 
+                            <img src="images/3d-pen.png" class="img_icons">
+                            <img src="images/two.png" class="img_no"> 
                         </div>
                         <h3>States <span>Your Requirements</span></h3>
                         <p>Cutomized product as per need of the customer</p>
@@ -400,8 +392,8 @@
                 <div class="col-lg-4 col-md-12 col-sm-12  trio-submain3">
                     <div class="trio-submain3-div1">
                        <div>
-                            <img src="images/wall-clock.png">
-                            <img src="images/three.png"> 
+                            <img src="images/wall-clock.png" class="img_icons">
+                            <img src="images/three.png" class="img_no"> 
                         </div>
                         <h3>Get Your <span>Desired Work Done In Meantime</span></h3>
                         <p>we provide customer support 24/7.</p>
@@ -519,7 +511,7 @@
     </section>
 
 
-    <section class="Appoinment-outer-main">
+    <section class="Appoinment-outer-main" id="contactme">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-md-8 col-sm-12">
@@ -788,6 +780,11 @@
         </div><!-- Back to top -->
      </div>
 </body>
+        <!-- JS -->
+        
+        <script src="./Javascript/swiper-bundle.min.js"></script>
+        <script src="./Javascript/script.js"></script> 
+
     <script type="text/javascript">
     var PRELOAD = document.getElementById("MYLOADING");
     function MYSPIN(){
