google search console tag added

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <link rel="stylesheet" href="style/mediastyle.css">
         <link rel="stylesheet" href="style/Spinnerstyle.css">
 
+        <!-- Search console tag -->
+        <meta name="google-site-verification" content="ODcyCPfIG_CaWo8fX88JopgVJkCvbkIDsyQVtvoGKH8" />
+
     <title>Savaliya Technology</title>
 
 
